implement the update one user operation
- implement business login
- implement controller layer
- implement router
- write integration test
- write document for the route
